--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scopenv",
-  "version": "0.0.3",
-  "description": "environment variables with any number of prefixes",
+  "version": "0.0.4",
+  "description": "environment variables with optional, variadic prefixes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
